--- a/www/apps/api-reference/specs/admin/openapi.full.yaml
+++ b/www/apps/api-reference/specs/admin/openapi.full.yaml
@@ -16698,8 +16698,8 @@ paths:
   /admin/inventory-items/location-levels/batch:
     post:
       operationId: PostInventoryItemsLocationLevelsBatch
-      summary: Create Inventory Item
-      description: Create a inventory item.
+      summary: Manage Inventory Levels
+      description: Manage inventory levels to create, update, or delete them.
       x-authenticated: true
       parameters: []
       security:
@@ -16711,14 +16711,14 @@ paths:
           application/json:
             schema:
               type: object
-              description: SUMMARY
+              description: The inventory levels to manage.
               properties:
                 create:
                   type: array
-                  description: The inventory item's create.
+                  description: The inventory levels to create.
                   items:
                     type: object
-                    description: The create's details.
+                    description: The details of an inventory level to create.
                     required:
                       - location_id
                       - inventory_item_id
@@ -16726,25 +16726,25 @@ paths:
                       location_id:
                         type: string
                         title: location_id
-                        description: The create's location id.
+                        description: The ID of the associated stock location.
                       inventory_item_id:
                         type: string
                         title: inventory_item_id
-                        description: The create's inventory item id.
+                        description: The ID of the associated inventory item.
                       stocked_quantity:
                         type: number
                         title: stocked_quantity
-                        description: The create's stocked quantity.
+                        description: The stocked quantity.
                       incoming_quantity:
                         type: number
                         title: incoming_quantity
-                        description: The create's incoming quantity.
+                        description: The incoming quantity to be added to stock.
                 update:
                   type: array
-                  description: The inventory item's update.
+                  description: The inventory levels to update.
                   items:
                     type: object
-                    description: The update's details.
+                    description: The details of an inventory level to update.
                     required:
                       - location_id
                       - inventory_item_id
@@ -16752,36 +16752,58 @@ paths:
                       location_id:
                         type: string
                         title: location_id
-                        description: The update's location id.
+                        description: The ID of the associated stock location.
                       inventory_item_id:
                         type: string
                         title: inventory_item_id
-                        description: The update's inventory item id.
+                        description: The ID of the associated inventory item.
                       stocked_quantity:
                         type: number
                         title: stocked_quantity
-                        description: The update's stocked quantity.
+                        description: The stocked quantity.
                       incoming_quantity:
                         type: number
                         title: incoming_quantity
-                        description: The update's incoming quantity.
+                        description: The incoming quantity to be added to stock.
                 delete:
                   type: array
-                  description: The inventory item's delete.
+                  description: The IDs of the inventory levels to delete.
                   items:
                     type: string
                     title: delete
-                    description: The delete's details.
+                    description: The ID of the inventory level to delete.
                 force:
                   type: boolean
                   title: force
-                  description: The inventory item's force.
+                  description: Whether to delete specified inventory levels even if they have a non-zero stocked quantity.
       x-codeSamples:
         - lang: Shell
           label: cURL
           source: |-
             curl -X POST '{backend_url}/admin/inventory-items/location-levels/batch' \
-            -H 'Authorization: Bearer {access_token}'
+            -H 'Authorization: Bearer {access_token}' \
+            -H 'Content-Type: application/json' \
+            --data-raw '{
+              "create": [
+                {
+                  "location_id": "sloc_123",
+                  "inventory_item_id": "iitem_123",
+                  "stocked_quantity": 100,
+                  "incoming_quantity": 50
+                }
+              ],
+              "update": [
+                {
+                  "location_id": "sloc_456",
+                  "inventory_item_id": "iitem_456",
+                  "stocked_quantity": 200,
+                  "incoming_quantity": 75
+                }
+              ],
+              "delete": [
+                "iilev_123"
+              ]
+            }'
       tags:
         - Inventory Items
       responses:
@@ -43803,7 +43825,7 @@ components:
           description: The quantity that results from matching the `buyget` promotion's condition. For example, if the promotion is a "Buy 2 shirts get 1 free", the value of this attribute is `1`.
     AdminBatchInventoryItemLocationsLevel:
       type: object
-      description: The inventory levels to create or delete.
+      description: The inventory levels to create, update, or delete.
       properties:
         create:
           type: array
@@ -43844,11 +43866,11 @@ components:
               location_id:
                 type: string
                 title: location_id
-                description: The update's location id.
+                description: The associated stock location's ID.
               id:
                 type: string
                 title: id
-                description: The update's ID.
+                description: The ID of the location level.
             required:
               - location_id
         delete:
@@ -43861,7 +43883,7 @@ components:
         force:
           type: boolean
           title: force
-          description: The inventory item's force.
+          description: Whether to delete specified inventory levels even if they have a non-zero stocked quantity.
       x-schemaName: AdminBatchInventoryItemLocationsLevel
     AdminBatchProductRequest:
       type: object
@@ -47696,7 +47718,7 @@ components:
               description: The number of products that will be updated by this import.
     AdminInventoryItem:
       type: object
-      description: The inventory item's inventory.
+      description: The inventory item's details.
       x-schemaName: AdminInventoryItem
       required:
         - id
@@ -47705,65 +47727,65 @@ components:
         id:
           type: string
           title: id
-          description: The inventory's ID.
+          description: The inventory item's ID.
         sku:
           type: string
           title: sku
-          description: The inventory's sku.
+          description: The inventory item's sku.
         origin_country:
           type: string
           title: origin_country
-          description: The inventory's origin country.
+          description: The inventory item's origin country.
         hs_code:
           type: string
           title: hs_code
-          description: The inventory's hs code.
+          description: The inventory item's HS code.
         requires_shipping:
           type: boolean
           title: requires_shipping
-          description: The inventory's requires shipping.
+          description: Whether the inventory item requires shipping.
         mid_code:
           type: string
           title: mid_code
-          description: The inventory's mid code.
+          description: The inventory item's MID code.
         material:
           type: string
           title: material
-          description: The inventory's material.
+          description: The inventory item's material.
         weight:
           type: number
           title: weight
-          description: The inventory's weight.
+          description: The inventory item's weight.
         length:
           type: number
           title: length
-          description: The inventory's length.
+          description: The inventory item's length.
         height:
           type: number
           title: height
-          description: The inventory's height.
+          description: The inventory item's height.
         width:
           type: number
           title: width
-          description: The inventory's width.
+          description: The inventory item's width.
         title:
           type: string
           title: title
-          description: The inventory's title.
+          description: The inventory item's title.
         description:
           type: string
           title: description
-          description: The inventory's description.
+          description: The inventory item's description.
         thumbnail:
           type: string
           title: thumbnail
-          description: The inventory's thumbnail.
+          description: The thumbnail URL of the inventory item.
         metadata:
           type: object
-          description: The inventory's metadata.
+          description: Custom key-value pairs, used to store additional information about the inventory item.
         location_levels:
           type: array
-          description: The inventory's location levels.
+          description: The inventory item's location levels.
           items:
             $ref: '#/components/schemas/AdminInventoryLevel'
     AdminInventoryItemResponse:
@@ -52069,7 +52091,7 @@ components:
                         description: The ID of the inventory item.
     AdminProductVariantInventoryItemLink:
       type: object
-      description: The inventory item's inventory items.
+      description: An association between a product variant and an inventory item.
       x-schemaName: AdminProductVariantInventoryItemLink
       required:
         - id
@@ -52079,17 +52101,17 @@ components:
         id:
           type: string
           title: id
-          description: The inventory item's ID.
+          description: The ID of the association.
         variant_id:
           type: string
           title: variant_id
-          description: The inventory item's variant id.
+          description: The associated product variant's ID.
         variant:
           type: object
         inventory_item_id:
           type: string
           title: inventory_item_id
-          description: The inventory item's inventory item id.
+          description: The associated inventory item's ID.
         inventory:
           $ref: '#/components/schemas/AdminInventoryItem'
     AdminProductVariantInventoryLink:
@@ -53268,16 +53290,8 @@ components:
           description: The shipping option rule's operator.
           example: eq
         value:
-          oneOf:
-            - type: string
-              title: value
-              description: The rule's value.
-            - type: array
-              description: The rule's value.
-              items:
-                type: string
-                title: value
-                description: The value's details.
+          type: string
+          title: value
         shipping_option_id:
           type: string
           title: shipping_option_id
