--- a/www/apps/api-reference/specs/store/components/schemas/AdminBatchInventoryItemLocationsLevel.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/AdminBatchInventoryItemLocationsLevel.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The inventory levels to create or delete.
+description: The inventory levels to create, update, or delete.
 properties:
   create:
     type: array
@@ -40,11 +40,11 @@ properties:
         location_id:
           type: string
           title: location_id
-          description: The update's location id.
+          description: The associated stock location's ID.
         id:
           type: string
           title: id
-          description: The update's ID.
+          description: The ID of the location level.
       required:
         - location_id
   delete:
@@ -57,5 +57,7 @@ properties:
   force:
     type: boolean
     title: force
-    description: The inventory item's force.
+    description: >-
+      Whether to delete specified inventory levels even if they have a non-zero
+      stocked quantity.
 x-schemaName: AdminBatchInventoryItemLocationsLevel
