--- a/www/apps/api-reference/specs/store/components/schemas/AdminProductVariantInventoryItemLink.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/AdminProductVariantInventoryItemLink.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The inventory item's inventory items.
+description: An association between a product variant and an inventory item.
 x-schemaName: AdminProductVariantInventoryItemLink
 required:
   - id
@@ -9,16 +9,16 @@ properties:
   id:
     type: string
     title: id
-    description: The inventory item's ID.
+    description: The ID of the association.
   variant_id:
     type: string
     title: variant_id
-    description: The inventory item's variant id.
+    description: The associated product variant's ID.
   variant:
     $ref: ./AdminProductVariant.yaml
   inventory_item_id:
     type: string
     title: inventory_item_id
-    description: The inventory item's inventory item id.
+    description: The associated inventory item's ID.
   inventory:
     $ref: ./AdminInventoryItem.yaml
