--- a/packages/modules/api-key/package.json
+++ b/packages/modules/api-key/package.json
@@ -36,8 +36,8 @@
     "orm:cache:clear": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm cache:clear"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.3.1",
-    "@medusajs/test-utils": "^2.3.1",
+    "@medusajs/framework": "~2.3.1",
+    "@medusajs/test-utils": "~2.3.1",
     "@mikro-orm/cli": "5.9.7",
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
@@ -47,7 +47,7 @@
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "@medusajs/framework": "^2.0.0",
+    "@medusajs/framework": "~2.0.0",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
