--- a/packages/modules/workflow-engine-inmemory/package.json
+++ b/packages/modules/workflow-engine-inmemory/package.json
@@ -36,8 +36,8 @@
     "orm:cache:clear": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts medusa-mikro-orm cache:clear"
   },
   "devDependencies": {
-    "@medusajs/framework": "^2.3.1",
-    "@medusajs/test-utils": "^2.3.1",
+    "@medusajs/framework": "~2.3.1",
+    "@medusajs/test-utils": "~2.3.1",
     "@mikro-orm/cli": "5.9.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
@@ -54,7 +54,7 @@
     "ulid": "^2.3.0"
   },
   "peerDependencies": {
-    "@medusajs/framework": "^2.0.0",
+    "@medusajs/framework": "~2.0.0",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
