--- a/packages/modules/providers/locking-postgres/package.json
+++ b/packages/modules/providers/locking-postgres/package.json
@@ -20,7 +20,7 @@
   "author": "Medusa",
   "license": "MIT",
   "devDependencies": {
-    "@medusajs/framework": "^2.3.1",
+    "@medusajs/framework": "~2.3.1",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
